# CMakeStudy

command/: CMakeLists.txt
command/lib/bar/include/: bar.h
command/src/: main.cpp
crosslidar/src/: main.cpp
fetch-content/src/: fetch-content.cpp
package-manager/: CMakeLists.txt  CMakePresets.json
package-manager/src/: main.cpp
practice/: CMakeLists.txt
test/: CMakeLists.txt
test/buid/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  fail.vcxproj  fail.vcxproj.filters  pass.vcxproj  pass.vcxproj.filters  test.sln
test/buid/Testing/Temporary/: CTestCostData.txt
test/buid/fail.dir/Debug/: fail.exe.recipe  fail.ilk
test/buid/fail.dir/Debug/fail.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
test/buid/pass.dir/Debug/: pass.exe.recipe  pass.ilk
test/buid/pass.dir/Debug/pass.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
test/buid/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
test/buid/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.write.1.tlog
test/buid/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
test/buid/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
test/src/: fail.cpp
variable/: CMakeLists.txt
